# mordant

./: .gitignore  Cargo.toml  LICENSE  README.md  example.css  mordant.toml
bench/: bench.sh  mordant.md  mordant.toml
bench/mordant/queries/bash/: highlights.scm
bench/mordant/queries/html/: highlights.scm  injections.scm
bench/mordant/queries/python/: highlights.scm
src/: config.rs  error.rs  file_highlighter.rs  main.rs  tree_sitter_facade.rs
src/tests/: mod.rs
src/tests/injected/: input.md  mordant.toml  output.md
src/tests/javascript/: input.md  output.md
src/tests/json/: input.md  output.md
src/tests/lua/: input.md  output.md
src/tests/multiple-langs/: input.md  mordant.toml  output.md
src/tests/python/: input.md  output.md
src/user_config/: error.rs  highlighter_options.rs  mod.rs  treesitter_util.rs
