[package]
name = "mordant"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.32", features = ["derive"] }
tree-sitter = "0.25.3"
tree-sitter-highlight = "0.25.3"
tree-sitter-javascript = "0.23.1"
tree-sitter-json = "0.24.8"
tree-sitter-lua = "0.2.0"
tree-sitter-md = "0.3.2"
tree-sitter-python = "0.23.6"
tree-sitter-typescript = "0.23.2"

[features]
default = ["python"]
python = []
